@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.122 2007-10-08 20:32:46 cmatsuoka Exp $
+$Id: ChangeLog,v 1.123 2007-10-09 00:03:56 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -16,6 +16,7 @@ Stable versions
 	- fixed effects settings in AIX and OSX CoreAudio drivers (reported
 	  by Douglas Carmichael and Chris Cox)
 	- fixed flow control in the OSX CoreAudio driver
+	- fixed Fuchs Tracker prowizard loader
 	- decoupled PT3 PTDT and MOD loader
 
 2.3.1 (20071005):
